--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "gulp default",
     "build": "gulp build",
     "watch": "gulp watch",
-    "w3c": "gulp w3c"
+    "w3c": "gulp w3c",
+    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -46,10 +48,11 @@
     "through2": "^4.0.2"
   },
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "moment-timezone": "^0.5.28"
   },
   "bugs": {
     "url": "https://github.com/daisyypeel/test-alvins/issues"
   },
-  "homepage": "https://github.com/daisyypeel/test-alvins#readme"
+  "homepage": " https://daisyypeel.github.io/test-alvins/"
 }
